K8s and Dockers/react-clock-basic-master/manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "jayaks2-c927"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "jayaks2-c927"
    spec:
      containers:
        - name: "jayaks2-c927"
          image: "jayacr002.azurecr.io/jayaks2"
          ports:
          - containerPort: 8080
