K8s and Dockers/react-clock-basic-master/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clockaks01
spec:
  type: LoadBalancer
  selector:
    app: clockaks01
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
